# ai-conflict-dashboard

./: .gitignore  .pre-commit-config.yaml  ASSERTION_STRENGTH_GUIDE.md  BUG_FIX_PRIORITY.md  CHANGELOG.md  CODEBASE_QUALITY_STATUS.md  CODE_QUALITY_SCRIPTS_REPORT.md  COMPLETE_TEST_GRADING_REPORT.md  CONTRIBUTING.md  CURRENT_STATE_ANALYSIS.md  DAILY_STATUS.md  DESKTOP_APP_ANALYSIS.md  DOCUMENTATION_INDEX.md  GRADE_A_REGRESSION_TEST_DOCUMENTATION.md  GRADE_A_REGRESSION_TEST_SUMMARY.md  GRADE_A_TEST_IMPLEMENTATION_SUMMARY.md  GRADE_A_TEST_STRATEGY.md  HTTPS-FIX-INSTRUCTIONS.txt  HTTPS_SETUP.md  IOfeature.md  JAVASCRIPT-STANDARDS.md  LINTER_FIXES_REPORT.md  MOCK_TEST_REDUCTION_ANALYSIS.md  Makefile  NextSteps.md  OverallReview.md  PRODUCTION-SETUP.md  PROGRESS_SUMMARY.md  README.md  REAL_TESTING_COMPLETE.md  REGRESSION_TEST_COVERAGE_REPORT.md  SIMPLE_FIX_APPROACH.md  STABILIZATION_SUMMARY.md  START_HERE.md  TEST_ENHANCEMENT_SUMMARY.md  TEST_GRADE_DISTRIBUTION_REPORT.md  TEST_GRADING_EXAMPLES.md  TEST_GRADING_REPORT.md  TEST_GRADING_RUBRIC.md  TEST_IMPROVEMENT_SUMMARY.md  (+39 more)
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  (+1 more)
backend/: DOCUMENTATION_VALIDATION_REPORT.md  FINAL_GRADE_B_UPGRADE_REPORT.md  FINAL_TEST_SUMMARY.md  GRADE_B_UPGRADE_SUMMARY.md  README.md  bandit.yml  consensus_analyzer.py  cors_config.py  final_grade_b_upgrade.py  fix_all_failing_tests.py  https_server.py  llm_providers.py  llm_providers_fixed.py  localhost+2-key.pem  localhost+2.pem  logging_config.py  main.py  memory_management.py  pyproject.toml  pytest.ini  rate_limiting.py  requirements.txt  run-quality-checks.sh  smart_chunking.py  structured_logging.py  structured_logging_fixed.py  test_ollama_integration.py  test_results.txt  test_workflow.py  timeout_handler.py  token_utils.py  token_utils_fixed.py  token_utils_wrapper.py  upgrade_all_tests_to_grade_b.py  workflow_executor.py
backend/docs/: RACE_CONDITIONS_FOUND.md
backend/plugins/: ollama_provider.py
backend/tests/: TEST_STATUS.md  assertion_helpers.py  conftest.py  test_adversarial.py  test_api_analyze.py  test_api_integration.py  test_business_logic.py  test_critical_bug_regression.py  test_critical_bugs.py  test_edge_cases_comprehensive.py  test_enhanced_llm_providers.py  test_extreme_parallel.py  test_grade_a_security.py  test_grade_b_comprehensive_fixes.py  test_grade_b_fixes.py  test_grade_b_upgrade_plan.py  test_high_priority_bugs.py  test_https_redirect_fix.py  test_https_redirect_issue.py  test_integration.py  test_llm_providers.py  test_llm_providers_integration.py  test_main.py  test_ollama_error_investigation.py  test_parallel_stress.py  test_real_bugs.py  test_real_integration.py  test_real_stress.py  test_regression_all_bugs.py  test_security_comprehensive.py  test_structured_logging.py  test_test_coverage_audit.py  test_token_utils.py  test_workflow_builder_access.py  test_workflow_builder_ollama.py  test_workflow_data_attribute_bug.py  test_workflow_functionality_integration.py
backend/utils/: security.py
desktop-app/: .env.example  .eslintrc.json  .gitignore  CRITICAL_ISSUES_ROADMAP.md  DESKTOP_BUGS.md  HONEST_REGRESSION_TEST_REPORT.md  INSTALL_RUST.md  MIGRATION_PLAN.md  Makefile  README.md  REGRESSION_TEST_COVERAGE.md  SHARED_CODE_STRATEGY.md  WEB_VS_DESKTOP_FEATURE_COMPARISON.md  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts  pytest.ini  run_tests.sh  start.bat  start_desktop.sh  test-dragdrop.html  vite.config.js  vitest.config.ts
desktop-app/src-tauri/: Cargo.toml  rust-toolchain.toml  rustfmt.toml
desktop-app/src-tauri/src/: main.rs
docs/: AI_DEVELOPMENT_STANDARDS.md  API_DOCUMENTATION.md  BACKLOG.md  BUGS.md  BUG_DATABASE.md  BUG_FIX_SUMMARY_2025-08-01.md  BUG_TRACKING.md  CHANGELOG.md  CODE_QUALITY.md  CODE_QUALITY_GUIDE.md  CODING_STANDARDS.md  CONFIGURATION_ANALYSIS.md  CRITICAL_ISSUES.md  DESKTOP_TRANSFORMATION_STATUS.md  DEVELOPMENT_SETUP.md  DRAG_DROP_TESTING_SOLUTION.md  E2E_BUG_DISCOVERY_SUMMARY.md  E2E_TEST_ANALYSIS.md  E2E_WORKFLOW_TESTING.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_NOTES_PHASE3.md  IMPORT_ERROR_ANALYSIS.md  LOGGING_AND_DEBUGGING.md  MVP_TASKS.md  MVP_TASK_PLAN.md  PHASE_0.1_COMPLETED.md  PHASE_0.1_PLAN.md  PHASE_1_COMPLETED.md  PHASE_2_COMPLETED.md  PHASE_3_COMPLETED.md  PROVIDERS.md  ProjectOverview.md  ROADMAP.md  TASKS_STATUS.md  TESTING.md  TESTING_GUIDE.md  WORKFLOW_BUILDER.md  conflictdashboardPLAN.md  initialarch.md
frontend/: .eslintrc.json  .eslintrc.security.cjs  .gitignore  .lintstagedrc.json  E2E_TEST_SUMMARY.md  FINAL_QUALITY_REPORT.md  FREE_JS_TOOLCHAIN.md  JS_TOOLCHAIN_STATUS.md  QUALITY_ANALYSIS_RESULTS.md  README.md  biome.json  comparison-engine.js  debug-console.html  deep-debug.html  direct-error-test.html  error-detective.html  history-manager.js  index.html  jest.config.js  package-lock.json  package.json  playwright.config.js  run-e2e-workflow-tests.js  run-quality-checks.sh  styles.css  tailwind.config.js  test-drawflow.html  test-localstorage.html  test-ollama-translation.py  test-ollama.html  test-workflow-launcher.html  test-workflow-load.html  test-workflow-simple.html  tsconfig.json  vitest.config.js  vitest.config.ts  workflow-basic.html  workflow-builder-simple.html  workflow-builder.html  workflow-debug.html  (+4 more)
ui/: .eslintignore  .eslintrc.js  BDD_SPECIFICATIONS.md  DRAG_DROP_TESTING_SOLUTION.md  E2E_MIGRATION_STATUS.md  E2E_TEST_ANALYSIS.md  E2E_TEST_FIX_PLAN.md  E2E_TEST_MIGRATION_GUIDE.md  ESLINT_CONFIGURATION_REPORT.md  FINAL_TEST_SUMMARY.md  README.md  SHARED_CODE_STRATEGY.md  TEST_RESULTS.md  biome.json  create_icons.sh  demo-workflow.html  index.html  lint-results.txt  package-lock.json  package.json  playwright-ct.config.ts  playwright.config.ts  requirements.txt  run_app.sh  run_backend.sh  start.sh  test-canvas-visibility.spec.ts  test-results.txt  test_desktop.sh  tsconfig.json  tsconfig.node.json  vite.config.js  vitest.config.js  vitest.config.ts
(+241 files in other folders)
