[package]
name = "ai-conflict-dashboard"
version = "0.1.0"
description = "AI Conflict Dashboard Desktop Application"
authors = ["AI Conflict Dashboard Team"]
license = "MIT"
repository = "https://github.com/yourusername/ai-conflict-dashboard"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
